syntax = "proto3";

package quiz;

option java_package = "org.acme.quiz.grpc";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

service Quiz {
  rpc GetQuestions(google.protobuf.Empty) returns (stream Question);

  rpc Respond(Answer) returns (Response);

  rpc SignUp(SignUpRequest) returns (SignUpResponse);

  rpc WatchScore(google.protobuf.Empty) returns (stream Results);
}

message Results {
  repeated UserResult results = 1;
}

message UserResult {
  string user = 1;
  int32 points = 2;
}

message Question {
  string text = 1;
  repeated string answers = 2;
}

message Answer {
  string text = 1;
  string user = 2;
  string question = 3;
}

message Response {
  enum Status {
    UNDEFINED = 0;
    WRONG = 1;
    CORRECT = 2;
    DUPLICATE_ANSWER = 3;
    TIMEOUT = 4;
  }
  Status status = 1;
}

message SignUpRequest{
  string name = 1;
}

message SignUpResponse {
  enum Status {
    UNDEFINED = 0;
    OKAY = 1;
    NAME_TAKEN = 2;
  }
  Status status = 1;
}